--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {  font-family:Monospace;
     margin:50px;
 }
 
-.nav {
+/*.nav {
   overflow: hidden;
   background-color: whitesmoke;
   
@@ -62,7 +62,7 @@ body {  font-family:Monospace;
 .topnav a:hover {
  background-color: #ddd;
   color: black; 
-}
+}*/
 </style>
 <script>
   /*
