--- a/home.html
+++ b/home.html
@@ -43,9 +43,20 @@
 </nav>
   
 <div class="container">
-  <h3>Collapsible Navbar</h3>
-  <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try to re-size this window).
-  <p>Only when the button is clicked, the navigation bar will be displayed.</p>
+  <div class="bg-img">
+  <div class="container">
+    <div class="topnav">
+      <h4>FILTERS</h4>
+      <a href="#hom">WEDDINGS</a>
+      <a href="#home">POTRAITS</a>
+      <a href="#news">MATERNITY / NEW BORNS </a>
+      <a href="#contact">EVENTS</a>
+      <a href="#about">ALL</a>
+    </div>
+  </div>
+</div>
+  <a href="home.html">Home page</a>
+</body>
 </div>
 
 </body>
