--- a/home.html
+++ b/home.html
@@ -7,6 +7,54 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+    .nav {
+  overflow: hidden;
+  background-color: whitesmoke;
+  
+}
+.nav a {
+  float: right;
+  color: black;
+  text-align: center;
+  padding: 14px 14px;
+  text-decoration: none;
+  font-size: 14px;
+}
+.nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.bg-img {
+  background-image: url("C://Users//ADMIN//Desktop//image.jpg");
+  min-height:600px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:center;
+  position: relative;
+}
+.container {
+  position: absolute;
+  margin: 20px;
+  width: auto;
+}
+.topnav {
+  overflow: hidden;
+  background-color: whitesmoke;
+}
+.topnav a {
+  float: right;
+  color: black;
+  text-align: center;
+  padding: 14px 14px;
+  text-decoration: none;
+  font-size: 14px;
+}
+.topnav a:hover {
+ background-color: #ddd;
+  color: black; 
+}
+  </style>
 </head>
 <body>
 
