--- a/home.html
+++ b/home.html
@@ -13,18 +13,7 @@
   background-color: whitesmoke;
   
 }
-.nav a {
-  float: right;
-  color: black;
-  text-align: center;
-  padding: 14px 14px;
-  text-decoration: none;
-  font-size: 14px;
-}
-.nav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+
 .bg-img {
   background-image: url("C://Users//ADMIN//Desktop//image.jpg");
   min-height:600px;
@@ -32,27 +21,6 @@
   background-repeat: no-repeat;
   background-size:center;
   position: relative;
-}
-.container {
-  position: absolute;
-  margin: 20px;
-  width: auto;
-}
-.topnav {
-  overflow: hidden;
-  background-color: whitesmoke;
-}
-.topnav a {
-  float: right;
-  color: black;
-  text-align: center;
-  padding: 14px 14px;
-  text-decoration: none;
-  font-size: 14px;
-}
-.topnav a:hover {
- background-color: #ddd;
-  color: black; 
 }
   </style>
 </head>
@@ -69,13 +37,13 @@
       <a class="navbar-brand" href="#">SNAPSZEES</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav" style = "allign:right">
         <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
-          <a href="#">Page 1</a>
+          <a href="#">Page 11</a>
         </li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="#">Page 12</a></li>
+        <li><a href="#">Page 13</a></li>
       </ul>
      
     </div>
