--- a/home.html
+++ b/home.html
@@ -39,11 +39,11 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav" style = "allign:right">
         <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown">
-          <a href="#">Page 11</a>
+        <li style="align-content: right;text-align:right;">
+          <a href="#" style="align-content: right;text-align:right;">Page 11</a>
         </li>
-        <li><a href="#">Page 12</a></li>
-        <li><a href="#">Page 13</a></li>
+        <li style="align-content: right;text-align:right;"><a href="#">Page 22</a></li>
+        <li style="align-content: right;text-align:right;"><a href="#">Page 33</a></li>
       </ul>
      
     </div>
