--- a/home.html
+++ b/home.html
@@ -37,13 +37,11 @@
       <a class="navbar-brand" href="#">SNAPSZEES</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav" style = "allign:right">
+      <ul class="nav navbar-nav ml-auto">
         <li class="active"><a href="#">Home</a></li>
-        <li style="align-content: right;text-align:right;">
-          <a href="#" style="align-content: right;text-align:right;">Page 11</a>
-        </li>
-        <li style="align-content: right;text-align:right;"><a href="#">Page 22</a></li>
-        <li style="align-content: right;text-align:right;"><a href="#">Page 33</a></li>
+        <li ><a href="#" >Page 11</a></li>
+        <li ><a href="#">Page 22</a></li>
+        <li ><a href="#">Page 33</a></li>
       </ul>
      
     </div>
